--- a/css/main.css
+++ b/css/main.css
@@ -1,107 +1,44 @@
 body {
-  color: #FFFFFF;
+  color: #000000;
   background-color: #A9A9A9;
   margin: 0 auto;
   text-align: center;
   font-family: Roboto, Helvetica, Arial, sans-serif ;
-  font-size: 2rem;
+  font-size: 1.25rem;
   min-height: 80%;
 
 }
 
 hr {
   padding: 0.2rem;
-
+  margin: 1.5em 100px;
 }
 
-h1,h2, h3, h4, h5, h6 {
-  font-family: "Montserrat";
-  color: black;
-  font-weight: 500;
-  font-size: 1.5rem;
-}
-
-div {
-  background-color: inherit;
-  min-height: 50%;
-}
-
-p {
-  line-height: 2;
-  color: black;
-  padding: 1rem;
-  font-size: 1.2rem;
-}
-
-ul {
-  list-style: none;
-}
-
-ul li {
-  color: black;
-  font-weight: 400;
-}
-
-a {
-  font-size: 1.2rem;
-  margin: 10px 20px;
-  color: #ffffff !important;
-  text-decoration: none;
+a{
   font-weight: bold;
-}
-
-.email-link{
-  font-size: 1rem;
-  color: navy !important;
-  text-decoration: none;
-  font-weight: bold;
+  font-style: italic;
 }
 
 a:hover{
   text-decoration: underline;
   color: forestgreen !important;
   font-weight: bold;
+  font-style: italic;
 }
 
-.container-fluid > li > a{
-    color: red;
+.form-group{
+  padding: 2px 10px;
 }
 
-.card {
-  margin: 30px auto;
-
-
-}
-.card-title {
-  padding: 1rem;
+.card{
+  min-height: 100%;
 }
 
-.card > iframe {
-  margin: auto;
+.card-body{
+  min-height: 100%;
 }
 
-.card-body > li{
-  padding: 0.7rem;
-}
-
-
-/* footer */
-.bottom-container {
-  padding: 50px 0px 20px;
-  background-color: #66CCFF;
-
-}
-
-.footer-link {
-  color: #FFFFFF;
-}
-
-.footer-link a {
-  text-decoration: none;
-}
-
-.copyright{
-  color: #ffffff;
-  font-size: 0.95rem;
-  padding: 20px 0;
+#cv{
+  text-align: left;
+  font-size: 1.25em;
 }
